app/db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milestone2-db
  namespace: default
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec: # this is our pod spec!
      containers:
        - name: db
          image: mongodb/mongodb-community-server
          ports:
            - containerPort: 27017
              name: dbport # from now on we can use the name http to refer to this port
          livenessProbe: # checks if the server still works every 5 seconds
            httpGet:
              path: /
              port: dbport
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe: # checks if the server is ready to accept traffic
            httpGet:
              path: /
              port: dbport
            initialDelaySeconds: 2
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "100m"
