app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milestone2-web
  namespace: default
spec:
  selector:
    matchLabels:
      app: web
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec: # this is our pod spec!
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
        - name: web
          image: ghcr.io/ward-smeyers/lws-milestone2-web:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: webport # from now on we can use the name http to refer to this port
          tty: true
          livenessProbe: # checks if the server still works every 5 seconds
            httpGet:
              path: /
              port: webport
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe: # checks if the server is ready to accept traffic
            httpGet:
              path: /
              port: webport
            initialDelaySeconds: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milestone2-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec: # this is our pod spec!
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
        - name: api
          image: ghcr.io/ward-smeyers/lws-milestone2-api:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: apiport # from now on we can use the name http to refer to this port
          livenessProbe: # checks if the server still works every 5 seconds
            httpGet:
              path: /
              port: apiport
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe: # checks if the server is ready to accept traffic
            httpGet:
              path: /
              port: apiport
            initialDelaySeconds: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "100m"
